started on editing styles for responsiveness, fixed bug with z-index for particlesjs

--- a/src/App.css
+++ b/src/App.css
@@ -9,22 +9,9 @@ body {
   font-family: sans-serif;
   font-family: 'Lato', sans-serif;
   color: white;
+  background: #101F6C;
 }
 
-.App-header {
-  background-color: #222;
-  height: 100px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-  padding: 20px;
-}
-
-.App-intro {
-  font-size: large;
-}
 
 canvas {
   display: block;
